public/styles.css
body {
    background-image: url("fsh-spin.gif");
    background-color: rgb(150, 207, 221);
}

#window-area {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 98vw;
    height: 98vh;
    overflow: hidden;
}

#mainwindow {
    position: fixed;
    z-index: 1;
    width: 350px;
    height: 388px;
    --window-background-color: #45a5af;
}

#logwindow {
    position: fixed;
    right: 10px; bottom: 20px;
    z-index: 0;
    width: 500px;
    height:370px;
    --window-background-color: #b1b1b1;
}

#logarea {
    width:470px;
    height:320px;
    resize:none;
}

.window-body {
    height: 320px;
}

#bpm-input {
    width: 50px;
}

#tension-multiplier-select {
    width: 50px
}

input {
    font: var(--font);
    max-width: 250px;
}

@keyframes closeAnim {
    from {
        opacity: 1;
        transform: scale(1);
    }

    to {
        opacity: 0;
        transform: scale(0.95);
    }
}

@keyframes openAnim {
    from {
        opacity: 0;
        transform: scale(0.95);
    }

    to {
        opacity: 1;
        transform: scale(1);
    }
}

.window.closing {
    animation: closeAnim 0.25s ease-in-out forwards;
}
.window.opening {
    animation: openAnim 0.25s ease-out forwards;
}

.hidden {
    display: none;
}

.title-bar {
    user-select: none;
}

#dialog-failed {
    --window-background-color: #ff4848;
    height: 210px; 
}

#dialog-failed .window-body {
    height: 120px;
}

